--- a/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/FormMain.resx
+++ b/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/FormMain.resx
@@ -207,7 +207,7 @@
         DQogIDwvZz4NCjwvc3ZnPgs=
 </value>
   </data>
-  <data name="accordionControlElement6.ImageOptions.SvgImage" type="DevExpress.Utils.Svg.SvgImage, DevExpress.Data.v20.1" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btn_DSSP.ImageOptions.SvgImage" type="DevExpress.Utils.Svg.SvgImage, DevExpress.Data.v20.1" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFlEZXZFeHByZXNzLkRhdGEudjIwLjEsIFZlcnNpb249MjAuMS4z
         LjAsIEN1bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49Yjg4ZDE3NTRkNzAwZTQ5YQUBAAAAHURl
@@ -369,4 +369,15 @@
   <metadata name="xtraTabbedMdiManager1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>132, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="bunifuButton1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFUAAAAjCAYAAADljkaGAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADeSURBVGhD7dCxCcJQGEXht4UQFRzFCZzGJENZixjBUbKA
+        VSZQI6fSFBqu3blwmvf+6ivuT2tPi03bVYemW95tXvtzdRwdIS2l6VbX+jx9bD/VQzqiTh7YjCAVNRmk
+        oiaDVNRkkIqaDFJRk0EqajJIRU0GqajJIBU1GaSiJoNU1GSQipoMUlGTQSpqMkhFTQapqMkgFTUZpKIm
+        g1TUZJCKmgxSUZNBKmoySEVNBqmoySAVNRmkoiaDVNRkkIqaDNIXav/+aXOqBkhLaS/L7fPx9nlk31cN
+        9Wm9g9RlV8oDuk56lVj+WRQAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
